feat: support global CTO notifications